--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "prettify": "prettier --write ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@popperjs/core": "2.11.8",
     "axios": "^1.8.4",
     "bootstrap": "5.3.3",
